# lab2_prog

./: CMakeLists.txt  ip_filter.cpp  ip_filter.h  test_ip_filter.cpp
.github/workflows/: release.yml  release2.yml
gtests/: CMakeLists.txt  tests.cpp
resources/: Info.plist
